Updated SB Visuals Fixed excessive spacing between suggestion elements when user removed multiple suggestions. Fixed issue where the "Garbage Can" button would not show up. Removed "Internal Frame" from main index page* Fixed issue where Suggestion Bars would not always fully extend to end of the container.

--- a/web/_technical/styles/styles_sb.css
+++ b/web/_technical/styles/styles_sb.css
@@ -503,10 +503,11 @@ overflow:auto;
 border:1px #888888 outset;
 float:right;
 margin-top: 16px;
+margin-left: 13px;
 height: 30px;
 width: 70px;
 margin-bottom:25px;
-border-radius:35px;
+border-radius:25px;
 background:#f5f5f5;
 }
 
